--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
-
+ .container{
+                max-width: 600px;
+                margin: 0 auto;
+                color: #3e3c3c;
+                font-family: times-newroman;
+                padding-top: 200px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
